fix overflow mobile device

--- a/scss/Components/_loader.scss
+++ b/scss/Components/_loader.scss
@@ -19,15 +19,15 @@
   }
 }
 
-.loader {
-  overflow-x: hidden;
-}
+// .loader {
+//   overflow-x: hidden;
+// }
 
 @keyframes loadingAnimation {
   0% {
     width: 0px;
   }
   100% {
-    width: 400px;
+    width: 200px;
   }
 }
