--- a/scss/index.css
+++ b/scss/index.css
@@ -2,7 +2,6 @@ html {
   font-size: 100%;
   box-sizing: border-box;
   scroll-behavior: smooth;
-  overflow-x: hidden;
 }
 
 ::-moz-selection {
@@ -24,6 +23,7 @@ body {
   padding: 0;
   line-height: 1.3;
   font-family: "Poppins", sans-serif;
+  overflow-x: hidden;
   cursor: none;
 }
 
@@ -987,16 +987,12 @@ hr {
           animation-direction: alternate;
 }
 
-.loader {
-  overflow-x: hidden;
-}
-
 @-webkit-keyframes loadingAnimation {
   0% {
     width: 0px;
   }
   100% {
-    width: 400px;
+    width: 200px;
   }
 }
 
@@ -1005,6 +1001,6 @@ hr {
     width: 0px;
   }
   100% {
-    width: 400px;
+    width: 200px;
   }
 }/*# sourceMappingURL=index.css.map */
